[project]
name = "comfyui-xavis-utils"
description = "Houdini/Nuke-style UX tools for ComfyUI — node inspector, shake disconnect, wire knife, input rewire, drop on wire"
version = "0.3.0"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/xavinitram/ComfyUI-XavisUtils"

[tool.comfy]
PublisherId = "xavinitram"
DisplayName = "Xavi's Utils"
Icon = ""
